--- a/index.html
+++ b/index.html
@@ -751,7 +751,7 @@
                     I'm always open to discussing new opportunities, collaborations, or just connecting with fellow tech enthusiasts.
                 </p>
                 <div class="contact-links">
-                    <a href="mailto:dsayan154@gmail.com">📧 dsayan154@gmail.com</a>
+                    <a href="mailto:sayan@dsayan.co.in">📧 sayan@dsayan.co.in</a>
                     <a href="https://www.linkedin.com/in/dsayan154/" target="_blank">💼 LinkedIn</a>
                     <a href="https://medium.com/@dsayan154" target="_blank">✍️ Medium</a>
                     <a href="https://github.com/dsayan154" target="_blank">💻 GitHub</a>
