--- a/index.html
+++ b/index.html
@@ -671,7 +671,7 @@
                             <li>Led a team of DevOps engineers in delivering a Generative AI conversational banking solution</li>
                             <li>Architected scalable and highly secure CSO-approved infrastructure for GenAI application using AWS Bedrock, OpenSearch, ECS, and S3</li>
                             <li>Migrated legacy on-prem VM hosted application to Openshift based Kubernetes cluster</li>
-                            <li>Orchestrated migration of Jenkins CI multiple pipelines to GitLab CI</li>
+                            <li>Orchestrated migration of multiple Jenkins CI pipelines to GitLab CI</li>
                             <li>Designed centralized DevOps GitLab CI pipeline component library for developer self-service</li>
                         </ul>
                     </div>
