correcting some info

--- a/index.html
+++ b/index.html
@@ -675,7 +675,7 @@
                               <li><strong>Architected a CSO-approved, secure GenAI infrastructure</strong> utilizing AWS Bedrock, OpenSearch, and ECS, ensuring enterprise-grade scalability and compliance.</li>
                               <li><strong>Directed a DevOps team to deploy a production-ready Generative AI banking solution</strong> within a high-pressure 2-week timeframe, including full CI/CD pipeline integration.</li>
                               <li><strong>Modernized legacy infrastructure</strong> by architecting and executing the migration of VM-hosted applications to a high-availability OpenShift Kubernetes environment.</li>
-                              <li><strong>Streamlined enterprise version control</strong> by orchestrating the seamless migration of 100+ repositories from Bitbucket to GitLab with zero downtime.</li>
+                              <li><strong>Orchestrated a large-scale CI/CD migration</strong> from Jenkins to GitLab CI, seamlessly integrating a comprehensive DevSecOps toolchain including SonarQube, Veracode, Nexus, and Prisma Cloud for end-to-end security and quality gates.</li>
                               <li><strong>Empowered developer self-service</strong> by designing a centralized GitLab CI component library, reducing pipeline configuration time and enforcing global standards.</li>
                           </ul>
                     </div>
@@ -698,7 +698,7 @@
                         <div class="date">March 2017 - April 2020</div>
                           <ul>
                               <li><strong>Defined and executed a strategic Continuous Delivery (CD) roadmap</strong> using Jenkins, Docker, and Helm, streamlining application delivery from development to production.</li>
-                              <li><strong>Enhanced deployment reliability</strong> by implementing Canary release strategies on production Kubernetes clusters, minimizing the impact of potential regressions.</li>
+                              <li><strong>Enhanced deployment reliability</strong> by implementing Canary release strategies on production EKS clusters, minimizing the impact of potential regressions. Evaluated OSS tools like Twitter Diffy for traffic shadowing.</li>
                               <li><strong>Provisioned secure, compliant AWS infrastructure</strong> using CloudFormation, ensuring consistent environment replication and adherence to Infrastructure-as-Code (IaC) principles.</li>
                               <li><strong>Engineered a proactive observability pipeline</strong> featuring robust monitoring and automated alerting integrated with MS Teams and email for rapid incident response.</li>
                           </ul>
@@ -755,6 +755,7 @@
                     I'm always open to discussing new opportunities, collaborations, or just connecting with fellow tech enthusiasts.
                 </p>
                 <div class="contact-links">
+                    <a href="mailto:sayan@dsayan.co.in">📧 sayan@dsayan.co.in</a>
                     <a href="mailto:dsayan154@gmail.com">📧 dsayan154@gmail.com</a>
                     <a href="https://www.linkedin.com/in/dsayan154/" target="_blank">💼 LinkedIn</a>
                     <a href="https://medium.com/@dsayan154" target="_blank">✍️ Medium</a>
