added blog section

--- a/index.html
+++ b/index.html
@@ -611,7 +611,7 @@
                     <div class="cta-buttons">
                         <a href="#contact" class="btn btn-primary">Get in Touch</a>
                         <a href="#projects" class="btn btn-secondary">View Projects</a>
-                        <a href="#articles" class="btn btn-secondary">Technical Articles</a>
+                        <a href="blog.html" class="btn btn-secondary">Technical Articles</a>
                         <a href="Sayan_Das_Resume_122025.pdf" download class="btn btn-secondary">Download Resume</a>
                     </div>
                 </div>
