correcting routing back to home page

--- a/blog.html
+++ b/blog.html
@@ -350,9 +350,9 @@
 <body>
     <header>
         <nav>
-            <a href="index.html" class="logo">SD</a>
+            <a href="/" class="logo">SD</a>
             <div class="nav-right">
-                <a href="index.html" class="back-link">← Back to Portfolio</a>
+                <a href="/" class="back-link">← Back to Portfolio</a>
                 <button class="theme-toggle" onclick="toggleTheme()">☀️ / 🌙</button>
             </div>
         </nav>
